src/reccalc/parse.output
Grammar

    0 $accept: input "end-of-file"

    1 input: line
    2      | input line

    3 line: exp eol
    4     | error eol

    5 eol: "end-of-file"
    6    | "end-of-line"

    7 exp: "number"
    8    | exp "+" exp
    9    | exp "-" exp
   10    | exp "*" exp
   11    | exp "/" exp
   12    | "+" exp
   13    | "-" exp
   14    | "ln" exp
   15    | "string"


Terminals, with rules where they appear

    "end-of-file" (0) 0 5
    error (256) 4
    "+" (258) 8 12
    "-" (259) 9 13
    "*" (260) 10
    "/" (261) 11
    "ln" (262) 14
    "end-of-line" (263) 6
    "number" <float> (264) 7
    "string" <char*> (265) 15
    UNARY (266)


Nonterminals, with rules where they appear

    $accept (12)
        on left: 0
    input (13)
        on left: 1 2
        on right: 0 2
    line (14)
        on left: 3 4
        on right: 1 2
    eol (15)
        on left: 5 6
        on right: 3 4
    exp <float> (16)
        on left: 7 8 9 10 11 12 13 14 15
        on right: 3 8 9 10 11 12 13 14


State 0

    0 $accept: . input "end-of-file"

    error     shift, and go to state 1
    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "ln"      shift, and go to state 4
    "number"  shift, and go to state 5
    "string"  shift, and go to state 6

    input  go to state 7
    line   go to state 8
    exp    go to state 9


State 1

    4 line: error . eol

    "end-of-file"  shift, and go to state 10
    "end-of-line"  shift, and go to state 11

    eol  go to state 12


State 2

   12 exp: "+" . exp

    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "ln"      shift, and go to state 4
    "number"  shift, and go to state 5
    "string"  shift, and go to state 6

    exp  go to state 13


State 3

   13 exp: "-" . exp

    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "ln"      shift, and go to state 4
    "number"  shift, and go to state 5
    "string"  shift, and go to state 6

    exp  go to state 14


State 4

   14 exp: "ln" . exp

    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "ln"      shift, and go to state 4
    "number"  shift, and go to state 5
    "string"  shift, and go to state 6

    exp  go to state 15


State 5

    7 exp: "number" .

    $default  reduce using rule 7 (exp)


State 6

   15 exp: "string" .

    $default  reduce using rule 15 (exp)


State 7

    0 $accept: input . "end-of-file"
    2 input: input . line

    "end-of-file"  shift, and go to state 16
    error          shift, and go to state 1
    "+"            shift, and go to state 2
    "-"            shift, and go to state 3
    "ln"           shift, and go to state 4
    "number"       shift, and go to state 5
    "string"       shift, and go to state 6

    line  go to state 17
    exp   go to state 9


State 8

    1 input: line .

    $default  reduce using rule 1 (input)


State 9

    3 line: exp . eol
    8 exp: exp . "+" exp
    9    | exp . "-" exp
   10    | exp . "*" exp
   11    | exp . "/" exp

    "end-of-file"  shift, and go to state 10
    "+"            shift, and go to state 18
    "-"            shift, and go to state 19
    "*"            shift, and go to state 20
    "/"            shift, and go to state 21
    "end-of-line"  shift, and go to state 11

    eol  go to state 22


State 10

    5 eol: "end-of-file" .

    $default  reduce using rule 5 (eol)


State 11

    6 eol: "end-of-line" .

    $default  reduce using rule 6 (eol)


State 12

    4 line: error eol .

    $default  reduce using rule 4 (line)


State 13

    8 exp: exp . "+" exp
    9    | exp . "-" exp
   10    | exp . "*" exp
   11    | exp . "/" exp
   12    | "+" exp .

    $default  reduce using rule 12 (exp)


State 14

    8 exp: exp . "+" exp
    9    | exp . "-" exp
   10    | exp . "*" exp
   11    | exp . "/" exp
   13    | "-" exp .

    $default  reduce using rule 13 (exp)


State 15

    8 exp: exp . "+" exp
    9    | exp . "-" exp
   10    | exp . "*" exp
   11    | exp . "/" exp
   14    | "ln" exp .

    $default  reduce using rule 14 (exp)


State 16

    0 $accept: input "end-of-file" .

    $default  accept


State 17

    2 input: input line .

    $default  reduce using rule 2 (input)


State 18

    8 exp: exp "+" . exp

    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "ln"      shift, and go to state 4
    "number"  shift, and go to state 5
    "string"  shift, and go to state 6

    exp  go to state 23


State 19

    9 exp: exp "-" . exp

    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "ln"      shift, and go to state 4
    "number"  shift, and go to state 5
    "string"  shift, and go to state 6

    exp  go to state 24


State 20

   10 exp: exp "*" . exp

    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "ln"      shift, and go to state 4
    "number"  shift, and go to state 5
    "string"  shift, and go to state 6

    exp  go to state 25


State 21

   11 exp: exp "/" . exp

    "+"       shift, and go to state 2
    "-"       shift, and go to state 3
    "ln"      shift, and go to state 4
    "number"  shift, and go to state 5
    "string"  shift, and go to state 6

    exp  go to state 26


State 22

    3 line: exp eol .

    $default  reduce using rule 3 (line)


State 23

    8 exp: exp . "+" exp
    8    | exp "+" exp .
    9    | exp . "-" exp
   10    | exp . "*" exp
   11    | exp . "/" exp

    "*"  shift, and go to state 20
    "/"  shift, and go to state 21

    $default  reduce using rule 8 (exp)


State 24

    8 exp: exp . "+" exp
    9    | exp . "-" exp
    9    | exp "-" exp .
   10    | exp . "*" exp
   11    | exp . "/" exp

    "*"  shift, and go to state 20
    "/"  shift, and go to state 21

    $default  reduce using rule 9 (exp)


State 25

    8 exp: exp . "+" exp
    9    | exp . "-" exp
   10    | exp . "*" exp
   10    | exp "*" exp .
   11    | exp . "/" exp

    $default  reduce using rule 10 (exp)


State 26

    8 exp: exp . "+" exp
    9    | exp . "-" exp
   10    | exp . "*" exp
   11    | exp . "/" exp
   11    | exp "/" exp .

    $default  reduce using rule 11 (exp)
